# PyNotam

./: .gitignore  flake.nix  pyproject.toml
pynotam/: __init__.py  __init__.pyi  _parser.py  timeutils.py
pynotam/tests/: test_grammar.py  test_helper.py  test_notam.py
pynotam/tests/test_data/: A0624_91.txt  A2464_23.txt  C2557_23.txt  C2661_23.txt  M0679_23.txt  U0058_23.txt
